--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,24 @@
   object-fit: cover;
 }
 
-.card,
-.gallery-photo:hover {
+.card:hover {
   transform: translateY(-15px);
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
-.card,
+.card {
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  transition: all 500ms;
+}
+
 .gallery-photo {
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   transition: all 500ms;
+}
+
+.gallery-photo:hover {
+  transform: translateY(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
