--- a/style/style.css
+++ b/style/style.css
@@ -1,30 +1,33 @@
-.logonav {
+.navbar {
+  background-color: #f4ece0 !important;
+}
+.navbar img {
   width: 10rem;
   height: 10rem;
 }
-
-.navbar-nav {
+.navbar ul {
   margin-left: auto !important;
 }
 
-.navbar,
-.colorfooter,
-.card-body,
+.colorfooter {
+  background-color: #f4ece0 !important;
+}
+
+.card-body {
+  background-color: #f4ece0 !important;
+}
+
 .card-footer {
   background-color: #f4ece0 !important;
 }
 
 .colorfondo {
-  background-color: #f4ece09d !important;
+  background-color: rgba(244, 236, 224, 0.6156862745) !important;
 }
 
 .img-cover {
-  object-fit: cover;
-}
-
-.card:hover {
-  transform: translateY(-15px);
-  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .card {
@@ -32,14 +35,17 @@
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   transition: all 500ms;
 }
+.card:hover {
+  transform: translateY(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
 
 .gallery-photo {
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   transition: all 500ms;
 }
-
 .gallery-photo:hover {
   transform: translateY(-15px);
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
+}/*# sourceMappingURL=style.css.map */
