--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/* Var y Nesting*/
 .navbar {
   background-color: #f4ece0 !important;
 }
@@ -25,6 +26,7 @@
   background-color: rgba(244, 236, 224, 0.6156862745) !important;
 }
 
+/* Estilo tarjetas*/
 .img-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -40,6 +42,7 @@
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
+/* Estilo galeria*/
 .gallery-photo {
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
