--- a/style/style.scss
+++ b/style/style.scss
@@ -1,12 +1,12 @@
-$backgroundcolor: #f4ece0;
-$colortransparencia: #f4ece09d;
+@import "variables";
+@import "estilopropio";
 
+/* Var y Nesting*/
 .navbar {
   background-color: $backgroundcolor !important;
 
   img {
-    width: 10rem;
-    height: 10rem;
+    @include sizes(10rem, 10rem);
   }
 
   ul {
@@ -26,28 +26,4 @@ $colortransparencia: #f4ece09d;
 
 .colorfondo {
   background-color: $colortransparencia !important;
-}
-
-.img-cover {
-  object-fit: cover;
-}
-
-.card {
-  border-radius: 8px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  transition: all 500ms;
-  &:hover {
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-  }
-}
-
-.gallery-photo {
-  border-radius: 8px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  transition: all 500ms;
-  &:hover {
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-  }
 }
