--- a/style/style.css
+++ b/style/style.css
@@ -26,10 +26,14 @@
   background-color: rgba(244, 236, 224, 0.6156862745) !important;
 }
 
+.parrafop {
+  margin-top: 50px;
+}
+
 /* Estilo tarjetas*/
 .img-cover {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .card {
@@ -51,4 +55,4 @@
 .gallery-photo:hover {
   transform: translateY(-15px);
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
