--- a/style/style.css
+++ b/style/style.css
@@ -27,7 +27,7 @@
 }
 
 .parrafop {
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 /* Estilo tarjetas*/
@@ -46,11 +46,51 @@
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
+/* Modal */
+
+#galleryModal .modal-header {
+  background-color: #e9e9e9;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  border-radius: 0;
+}
+
+#galleryModal .modal-content {
+  background-color: #000;
+  border-radius: 0;
+}
+
+#carouselGallery img,
+#carouselGallery video {
+  height: calc(100vh - 80px);
+  max-height: calc(100vh - 80px);
+  object-fit: contain;
+}
+
+#carouselGallery .carousel-indicators {
+  margin-bottom: 0.5rem;
+}
+
+#carouselGallery .carousel-item.active,
+#carouselGallery .carousel-item-start,
+#carouselGallery .carousel-item-end {
+  display: flex;
+}
+
+.image-text {
+  font-size: 2rem;
+}
+
+#carousel img {
+  object-fit: cover;
+}
+
 /* Estilo galeria*/
 .gallery-photo {
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   transition: all 500ms;
+  cursor: pointer;
 }
 .gallery-photo:hover {
   transform: translateY(-15px);
